--- a/InetMarket/appsettings.json
+++ b/InetMarket/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=InetMarketBd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=InetMarket;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   
     "Logging": {
